--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,6 @@
-altair==2.2.2
-appnope==0.1.0
+altair==2.3.0
 asn1crypto==0.24.0
 attrs==18.2.0
-backcall==0.1.0
-bleach==3.0.2
 branca==0.3.1
 certifi==2018.11.29
 cffi==1.11.5
@@ -12,52 +9,28 @@ Click==7.0
 click-plugins==1.0.4
 cligj==0.5.0
 cryptography==2.3.1
-cryptography-vectors==2.3.1
 cycler==0.10.0
-decorator==4.3.0
 descartes==1.1.0
-Django==2.1.4
 entrypoints==0.2.3
-Fiona==1.8.2
+Fiona==1.7.10
 folium==0.7.0
-GDAL==2.3.2
+GDAL==2.2.2
 geographiclib==1.49
 geopandas==0.4.0
 geopy==1.17.0
-idna==2.7
-ipykernel==5.1.0
-ipython==7.1.1
-ipython-genutils==0.2.0
-ipywidgets==7.4.2
-jedi==0.13.1
+idna==2.8
 Jinja2==2.10
 jsonschema==3.0.0a3
-jupyter==1.0.0
-jupyter-client==5.2.3
-jupyter-console==6.0.0
-jupyter-core==4.4.0
 kiwisolver==1.0.1
 MarkupSafe==1.1.0
 matplotlib==3.0.2
-mistune==0.8.4
-mkl-fft==1.0.10
-mkl-random==1.0.2
+mkl-fft==1.0.6
+mkl-random==1.0.1
 munch==2.3.2
-nbconvert==5.3.1
-nbformat==4.4.0
-notebook==5.7.2
 numpy==1.15.4
 pandas==0.23.4
-pandocfilters==1.4.2
-parso==0.3.1
-pexpect==4.6.0
-pickleshare==0.7.5
-prometheus-client==0.4.2
-prompt-toolkit==2.0.7
 psycopg2==2.7.6.1
-ptyprocess==0.6.0
 pycparser==2.19
-Pygments==2.3.0
 pyOpenSSL==18.0.0
 pyparsing==2.3.0
 pyproj==1.9.5.1
@@ -66,22 +39,15 @@ PySAL==1.14.4.post2
 PySocks==1.6.8
 python-dateutil==2.7.5
 pytz==2018.7
-pyzmq==17.1.2
-qtconsole==4.4.3
-requests==2.20.1
+requests==2.21.0
 Rtree==0.8.3
 scipy==1.1.0
-Send2Trash==1.5.0
 Shapely==1.6.4.post1
 six==1.11.0
 SQLAlchemy==1.2.14
-terminado==0.8.1
-testpath==0.4.2
 toolz==0.9.0
 tornado==5.1.1
-traitlets==4.3.2
-urllib3==1.23
+urllib3==1.24.1
 vincent==0.4.4
-wcwidth==0.1.7
-webencodings==0.5.1
-widgetsnbextension==3.4.2
+win-inet-pton==1.0.1
+wincertstore==0.2
