--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,8 @@ jobs:
       - run:
           command: |
             ls
+            sudo apt-get install libgdal-dev
+            sudo apt install gdal-bin python-gdal python3-gdal
             sudo pip install -r requirements.txt
             python parkingadvisor/tests/test_clean_up.py
           name: Test
