--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,7 @@ jobs:
       - run:
           command: |
             ls
+            sudo apt-get update 
             sudo apt-get install libgdal-dev
             sudo apt install gdal-bin python-gdal python3-gdal
             sudo pip install -r requirements.txt
