--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,8 @@ jobs:
       - run:
           command: |
             ls
+            sudo add-apt-repository -y ppa:ubuntugis/ppa
+            sudo apt update 
             sudo apt-get update 
             sudo apt-get install libgdal-dev
             sudo apt install gdal-bin python-gdal python3-gdal
