--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,8 @@ jobs:
             ls
             sudo add-apt-repository -y ppa:ubuntugis/ppa
             sudo apt update 
-            sudo apt-get update 
+            sudo apt-get update
+            sudo apt-get clean 
             sudo apt-get install libgdal-dev
             sudo apt install gdal-bin python-gdal python3-gdal
             sudo pip install -r requirements.txt
