--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,7 @@ jobs:
             ls
             sudo apt-get update
             sudo apt-get install libgdal-dev
+            sudo apt-get upgrade
             sudo apt install gdal-bin python-gdal python3-gdal
             sudo pip install -r requirements.txt
             python parkingadvisor/tests/test_clean_up.py
