--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,11 +10,7 @@ jobs:
       - run:
           command: |
             ls
-            sudo apt-get update
-            sudo apt-get install libgdal-dev
-            sudo apt-get upgrade
-            sudo apt install gdal-bin python-gdal python3-gdal
-            sudo pip install -r requirements.txt
+            sudo pip install pytest, pandas, visual, pandas, numpy, geopandas, scipy, matplotlib, folium, geopy
             python parkingadvisor/tests/test_clean_up.py
           name: Test
 
